examples/rust/failing/derive_attr_with_paths/Left.rs
#[derive(Debug, my::Trait)]
struct Foo;
